Update #2 after pair programming/feedback